tripGo/src/main/java/com/example/tripGo/error/DuplicateResourceException.java
package com.example.tripGo.error;

public class DuplicateResourceException extends RuntimeException {
    public DuplicateResourceException(String message) { super(message); }
}